# MediaTest

./: settings.gradle
ScreenLive/src/androidTest/java/com/example/screenlive/: ExampleInstrumentedTest.kt
ScreenLive/src/main/: AndroidManifest.xml
ScreenLive/src/main/java/com/example/screenlive/: AudioCodec.kt
ScreenLive/src/test/java/com/example/screenlive/: ExampleUnitTest.kt
SurfaceCodec/src/androidTest/java/com/example/surfacecodec/: ExampleInstrumentedTest.kt
SurfaceCodec/src/main/: AndroidManifest.xml
SurfaceCodec/src/main/java/com/example/surfacecodec/: DecodePlayerLive.kt  EncodePushLive.kt  IServerLive.kt  LocalSurfaceView.kt  RemoteSurfaceView.kt  YUVUtils.kt  YuvUtils.java
SurfaceCodec/src/test/java/com/example/surfacecodec/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/example/mediaproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/mediaproject/: EncodeLive.kt  LiveActivity.kt  LocalSurfaceView.kt  MainActivity.kt  RtmpPackage.kt  (+3 more)
app/src/main/res/layout/: activity_live.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
projectclient/: build.gradle
projectclient/src/main/: AndroidManifest.xml
projectclient/src/main/res/layout/: activity_live.xml  activity_main.xml
projectclient/src/main/res/values/: strings.xml
(+12 files in other folders)
